# beepboopd

./: CLAUDE.md  Cargo.toml  Makefile  README.md  beep  beepboopd.service  engineering.neutral.beepboopd.plist
.github/workflows/: release.yml
src/: main.rs  tunes.rs
src/tunes/: beep.rs  chords.rs  classical.rs  clock.rs  countries.rs  jazz.rs  mod.rs  scale.rs  wee_woo.rs  zelda.rs
