[package]
name = "beepboopd"
version = "0.0.4"
edition = "2024"
description = "the beep boop daemon"
license = "GPL-2.0-only"
repository = "https://github.com/neutral-engineering/beepboopd"

[dependencies]
rodio = "0.22.2"
libc = "0.2"
clap = { version = "4.6.0", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
